[gd_scene load_steps=3 format=3 uid="uid://ir8ypkrvvjis"]

[ext_resource type="Script" uid="uid://8yfkioj6dgt3" path="res://scenes/main_page/main_page.gd" id="1_xwq8t"]
[ext_resource type="StyleBox" uid="uid://dlda8cpt25sst" path="res://assets/empty_stylebox.tres" id="2_uk4ct"]

[node name="MainPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwq8t")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RequestTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TabContainer" type="TabContainer" parent="Margin"]
layout_mode = 2
theme_override_styles/tab_focus = ExtResource("2_uk4ct")
current_tab = 0
tabs_position = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="Margin/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/TabContainer/ScrollContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/TabContainer/ScrollContainer2/VBoxContainer"]
layout_mode = 2
text = "Test Text!"

[node name="ScrollContainer3" type="ScrollContainer" parent="Margin/TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/TabContainer/ScrollContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/TabContainer/ScrollContainer3/VBoxContainer"]
layout_mode = 2
text = "Test Text!"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="timeout" from="RequestTimer" to="." method="_on_request_timer_timeout"]
